--- a/css/styles.css
+++ b/css/styles.css
@@ -1,40 +1,99 @@
 /* Google Font Family*/
+
 font-family: 'Indie Flower', cursive;
 font-family: 'Lobster', cursive;
 font-family: 'Pacifico', cursive;
 font-family: 'Gloria Hallelujah', cursive;
+body {}
 
-body{
-}
 .body-container {
-    position: relative;
-    overflow: hidden;
+  position: relative;
+  overflow: hidden;
 }
 .body-container h1 {
-    margin-top: 0px;
-    padding-top: 0px;
-    padding-bottom: 0px;
-    position: relative;
-    z-index: 1;
-    text-align: center;
-    font-size: 5em;
-    font-family: 'Gloria Hallelujah', cursive;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding-top: 10px;
+  padding-bottom: 30px;
+  position: relative;
+  z-index: 1;
+  text-align: center;
+  font-size: 5em;
+  font-family: 'Gloria Hallelujah', cursive;
+  font-weight: 900;
+  background-color: rgba(96, 171, 229, .6);
 }
 .body-container img {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: auto;
-    opacity: 0.2;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: auto;
+  opacity: 0.7;
+}
+
+.section-container{
+  background-color: rgba(186, 186, 186, .6);
 }
 
 .ul-box {
   width: 100%;
-  background-color: rgb(186, 186, 186);
+  justify-content: center;
+  text-align: center;
 }
 
+.day-box {
+  margin-left: 35px;
+  padding: 10px;
+  border: 2px solid #000;
+  list-style: none;
+  font-family: 'Gloria Hallelujah', cursive;
+  font-weight: 600;
+}
+
+.day-header{
+  font-family: 'Gloria Hallelujah', cursive;
+  font-weight: 600;
+}
+.ul-h2 {
+  margin-top: 25px;
+}
+.box {
+  margin-left: -15px;
+}
+
+.form-header {
+  margin-top: 175px;
+  font-family: 'Gloria Hallelujah', cursive;
+  font-weight: 600;
+}
 .form-box {
   width: 100%;
-  background-color: rgb(186, 186, 186);
+  text-align: center;
+  justify-content: center;
+  opacity: 0.8;
+  }
+
+  .form-group {
+    font-family: 'Gloria Hallelujah', cursive;
+    font-weight: 600;
+  }
+  .comp-header {
+    font-family: 'Gloria Hallelujah', cursive;
+    font-weight: 900;
+    text-align: center;
+    justify-content: center;
+    margin-top: 40px;
+      }
+.comp-li {
+  border: 2px solid #000;
+  list-style: none;
+  margin-bottom: 60px;
+  text-align: center;
+  justify-content: center;
+}
+.comp-ul {
+list-style: none;
+text-align: center;
+justify-content: center;
 }
