--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@ body {}
   position: relative;
   overflow: hidden;
 }
+
 .body-container h1 {
   margin-top: 0px;
   margin-bottom: 0px;
@@ -23,6 +24,7 @@ body {}
   font-weight: 900;
   background-color: rgba(44, 121, 244, .6);
 }
+
 .body-container img {
   position: absolute;
   left: 0;
@@ -32,7 +34,7 @@ body {}
   opacity: 0.7;
 }
 
-.section-container{
+.section-container {
   background-color: rgba(186, 186, 186, .6);
 }
 
@@ -51,13 +53,15 @@ body {}
   font-weight: 600;
 }
 
-.day-header{
+.day-header {
   font-family: 'Gloria Hallelujah', cursive;
   font-weight: 600;
 }
+
 .ul-h2 {
   margin-top: 25px;
 }
+
 .box {
   margin-left: -15px;
 }
@@ -67,24 +71,27 @@ body {}
   font-family: 'Gloria Hallelujah', cursive;
   font-weight: 600;
 }
+
 .form-box {
   width: 100%;
   text-align: center;
   justify-content: center;
   opacity: 0.8;
-  }
+}
 
-  .form-group {
-    font-family: 'Gloria Hallelujah', cursive;
-    font-weight: 600;
-  }
-  .comp-header {
-    font-family: 'Gloria Hallelujah', cursive;
-    font-weight: 900;
-    text-align: center;
-    justify-content: center;
-    margin-top: 40px;
-      }
+.form-group {
+  font-family: 'Gloria Hallelujah', cursive;
+  font-weight: 600;
+}
+
+.comp-header {
+  font-family: 'Gloria Hallelujah', cursive;
+  font-weight: 900;
+  text-align: center;
+  justify-content: center;
+  margin-top: 40px;
+}
+
 .comp-li {
   border: 2px solid #000;
   list-style: none;
@@ -92,14 +99,26 @@ body {}
   text-align: center;
   justify-content: center;
 }
+
 .comp-ul {
-list-style: none;
-text-align: center;
-justify-content: center;
+  list-style: none;
+  text-align: center;
+  justify-content: center;
+}
+
+.submit-button {
+  justify-content: center;
+  text-align: center;
+  margin-top: 15px;
+  margin-bottom: 0px;
+}
+
+label {
+  font-size: 1.5em;
 }
 
 @media (max-width: 768px) {
-  #form-col{
+  #form-col {
     -webkit-order: 1;
     -ms-order: 1;
     order: 1;
@@ -107,14 +126,18 @@ justify-content: center;
     margin-bottom: 50px;
   }
   #ul-col {
-    -webkit-order: 2;
-    -ms-order: 2;
-    order: 2;
-  }
-  #div-complete {
     -webkit-order: 3;
     -ms-order: 3;
     order: 3;
   }
-
+  #div-complete {
+    -webkit-order: 4;
+    -ms-order: 4;
+    order: 4;
+  }
+  .submit-button {
+    -webkit-order: 2;
+    -ms-order: 2;
+    order: 2;
+  }
 }
