--- a/css/styles.css
+++ b/css/styles.css
@@ -41,21 +41,71 @@ body {}
 .ul-box {
   width: 100%;
   justify-content: center;
-  text-align: center;
+
+  padding-left: 50px;
 }
 
-.day-box {
+
+.button-box {
+position: relative;
+top: 0;
+right: 0:
+}
+.day-box li{
+  padding-bottom: 10px;
+
+}
+ li {
+   border-bottom: 1px solid #000;
+   width: 90%;
+   padding-top: 12px;
+ }
+
+ li:last-of-type{
+   border-bottom: none;
+ }
+
+.day-box{
+  width: 100%;
   margin-left: 35px;
-  padding: 10px;
+  padding: 10px 10px 10px 40px;
   border: 2px solid #000;
   list-style: none;
   font-family: 'Gloria Hallelujah', cursive;
   font-weight: 600;
+  float: right;
+}
+
+
+.remove{
+    float: right;
+    margin: -29px 15px 0px 0px;
+    background: none;
+    position: relative;
+    border: 0px;
+    box-shadow: none;
+    outline: none;
+    cursor: pointer;
+    font-size: 1.2em;
+}
+
+.complete {
+  float: right;
+  margin: -30px 25px 0px 0px;
+  background: none;
+  position: relative;
+  border: 0px;
+  box-shadow: none;
+  outline: none;
+  cursor: pointer;
+  font-size: 1.3em;
+  }
 }
 
 .day-header {
   font-family: 'Gloria Hallelujah', cursive;
   font-weight: 600;
+  text-align: center;
 }
 
 .ul-h2 {
@@ -92,6 +142,8 @@ body {}
   margin-top: 40px;
 }
 
+
+
 .comp-li {
   border: 2px solid #000;
   list-style: none;
@@ -112,6 +164,7 @@ body {}
   margin-top: 15px;
   margin-bottom: 0px;
 }
+
 
 label {
   font-size: 1.5em;
