--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@ body {}
 .body-container {
   position: relative;
   overflow: hidden;
+  letter-spacing: 2px;
 }
 
 .body-container h1 {
@@ -23,6 +24,9 @@ body {}
   font-family: 'Gloria Hallelujah', cursive;
   font-weight: 900;
   background-color: rgba(44, 121, 244, .6);
+}
+.form-control{
+letter-spacing: 2px; 
 }
 
 .body-container img {
@@ -41,57 +45,67 @@ body {}
 .ul-box {
   width: 100%;
   justify-content: center;
-
   padding-left: 50px;
 }
 
-
 .button-box {
-position: relative;
-top: 0;
-right: 0:
+  position: relative;
+  top: 0;
+  right: 0:
 }
-.day-box li{
-  padding-bottom: 10px;
 
+.day-box li {
+  padding-bottom: 14px;
+  border-right: 1px solid #000;
 }
- li {
-   border-bottom: 1px solid #000;
-   width: 90%;
-   padding-top: 12px;
- }
 
- li:last-of-type{
-   border-bottom: none;
- }
+li{
+  border-bottom: 1px solid #000;
+  width: 92%;
+  padding: 18px 0px 0px 0px;
+}
 
-.day-box{
+li:last-of-type {
+  border-bottom: none;
+  padding-top: 12px;
+}
+
+.day-box {
   width: 100%;
   margin-left: 35px;
   padding: 10px 10px 10px 40px;
   border: 2px solid #000;
   list-style: none;
   font-family: 'Gloria Hallelujah', cursive;
-  font-weight: 600;
+  font-weight: 900;
   float: right;
+  background-color: rgba(231, 232, 234, 0.7);
+  letter-spacing: 2px;
 }
 
+.remove {
+  float: right;
+  margin: -29px 0px 0px 0px;
+  padding: 0px 15px 0px 0px;
+  background: none;
+  position: relative;
+  border: 0px;
+  box-shadow: none;
+  outline: none;
+  cursor: pointer;
+  font-size: 1.2em;
+  color: rgb(211, 31, 31);
+  transition: all 0.6s ease 0s;
+}
 
-.remove{
-    float: right;
-    margin: -29px 15px 0px 0px;
-    background: none;
-    position: relative;
-    border: 0px;
-    box-shadow: none;
-    outline: none;
-    cursor: pointer;
-    font-size: 1.2em;
+.remove:hover {
+  transform: scale(2.1);
 }
 
 .complete {
   float: right;
-  margin: -30px 25px 0px 0px;
+  margin: -30px -50px 0px 0px;
+  padding: 0px 15px 0px 0px;
   background: none;
   position: relative;
   border: 0px;
@@ -99,7 +113,12 @@ right: 0:
   outline: none;
   cursor: pointer;
   font-size: 1.3em;
-  }
+  color: green;
+  transition: all 0.6s ease 0s;
+}
+
+.complete:hover {
+  transform: scale(2.1);
 }
 
 .day-header {
@@ -142,14 +161,13 @@ right: 0:
   margin-top: 40px;
 }
 
-
-
 .comp-li {
   border: 2px solid #000;
   list-style: none;
   margin-bottom: 60px;
   text-align: center;
   justify-content: center;
+    background-color: rgba(231, 232, 234, 0.7);
 }
 
 .comp-ul {
@@ -165,6 +183,13 @@ right: 0:
   margin-bottom: 0px;
 }
 
+.complete-li-box{
+  width:em;
+  display: inline-block;
+  font-size: 1.4em;
+  position: relative;
+
+}
 
 label {
   font-size: 1.5em;
