--- a/css/styles.css
+++ b/css/styles.css
@@ -25,8 +25,9 @@ body {}
   font-weight: 900;
   background-color: rgba(44, 121, 244, .6);
 }
-.form-control{
-letter-spacing: 2px; 
+
+.form-control {
+  letter-spacing: 2px;
 }
 
 .body-container img {
@@ -54,21 +55,26 @@ letter-spacing: 2px;
   right: 0:
 }
 
-.day-box li {
+/* Button right border
+/* .day-box .li-time {
   padding-bottom: 14px;
   border-right: 1px solid #000;
-}
+} */
 
-li{
+/*    li css  */
+
+.li-time {
   border-bottom: 1px solid #000;
   width: 92%;
   padding: 18px 0px 0px 0px;
 }
 
-li:last-of-type {
+.li-time:last-of-type {
   border-bottom: none;
   padding-top: 12px;
 }
+
+/*    css for weekly list item box    */
 
 .day-box {
   width: 100%;
@@ -82,6 +88,8 @@ li:last-of-type {
   background-color: rgba(231, 232, 234, 0.7);
   letter-spacing: 2px;
 }
+
+/*    CSS for Delete and Complete Button on Weekly List Items        */
 
 .remove {
   float: right;
@@ -120,6 +128,8 @@ li:last-of-type {
 .complete:hover {
   transform: scale(2.1);
 }
+
+/*   CSS for decoration on Forms       */
 
 .day-header {
   font-family: 'Gloria Hallelujah', cursive;
@@ -167,7 +177,7 @@ li:last-of-type {
   margin-bottom: 60px;
   text-align: center;
   justify-content: center;
-    background-color: rgba(231, 232, 234, 0.7);
+  background-color: rgba(231, 232, 234, 0.7);
 }
 
 .comp-ul {
@@ -183,17 +193,22 @@ li:last-of-type {
   margin-bottom: 0px;
 }
 
-.complete-li-box{
-  width:em;
-  display: inline-block;
+/*      Completed List Item Box     */
+
+.ul-complete {
+  width: 100%;
+  text-align: left;
+  display: inline;
   font-size: 1.4em;
   position: relative;
-
+  list-style: none;
 }
 
-label {
-  font-size: 1.5em;
-}
+/* .li-completed{
+    border-bottom: 1px solid #000;
+    padding: 0px 0px 18px 0px;
+    margin: 0px 0px 0px 0px;
+} */
 
 @media (max-width: 768px) {
   #form-col {
