--- a/css/styles.css
+++ b/css/styles.css
@@ -105,6 +105,19 @@ body {}
   color: rgb(211, 31, 31);
   transition: all 0.6s ease 0s;
 }
+.remove-completed{
+  float: right;
+  margin: -19px 0px 0px 0px;
+  padding: 13px 15px 7px 0px;
+  background: none;  position: relative;
+  border: 0px;
+  box-shadow: none;
+  outline: none;
+  cursor: pointer;
+  font-size: 1.2em;
+  color: rgb(211, 31, 31);
+  transition: all 0.6s ease 0s;
+}
 
 .remove:hover {
   transform: scale(2.1);
@@ -172,6 +185,7 @@ body {}
 }
 
 .comp-li {
+  padding: 20px;
   border: 2px solid #000;
   list-style: none;
   margin-bottom: 60px;
